cmake_minimum_required(VERSION 3.6)
project(cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Threads)
link_libraries(${CMAKE_THREAD_LIBS_INIT})
add_executable(binary_tree binary_tree.cpp)
add_executable(stack stack.cpp)
add_executable(queue queue.cpp)
add_executable(sort sort.cpp)